# cppunit_ctest_example

./: CMakeLists.txt  README.md  palindrome.hxx  palindrome_test.cxx
